# logaut

./: 404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: docs.yml  lint.yml  python_publish.yml  test.yml
logaut/: __init__.py  _registry.py  core.py  exceptions.py  helpers.py
logaut/backends/: __init__.py  base.py  lydia.py
logaut/backends/common/: __init__.py  process_mona_output.py  utils.py
logaut/backends/common/find_atoms/: __init__.py  base.py  ldl.py  ltl.py
logaut/backends/ltlf2dfa/: __init__.py  core.py  to_ltlf2dfa_formula.py
logaut/backends/lydia/: __init__.py  _lydia_utils.py  core.py  to_lydia_grammar.py
scripts/: _ci-install-lydia-dependencies-ubuntu.sh  check_copyright.py  whitelist.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_main.py
tests/test_backends/: __init__.py  test_ltlf2dfa.py  test_lydia.py
