[tool.poetry]
name = "logaut"
version = "0.1.1"
description = "From logic to automata."
authors = ["Marco Favorito <favorito@diag.uniroma1.it>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://marcofavorito.me/logaut"
repository = "https://github.com/whitemech/logaut.git"
documentation = "https://marcofavorito.me/logaut"
keywords = []
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
#packages = []
include = []


#[tool.poetry.scripts]
#script_name = 'path/to/script'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/whitemech/logaut/issues"
"Pull Requests" = "https://github.com/whitemech/logaut/pulls"


[tool.poetry.dependencies]
python = "^3.8"
pylogics = "^0.1.0"
pythomata = "^0.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"
tox = "^4.5.2"
codecov = "^2.1.13"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.3.12"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
pylint = "^2.17.4"
safety = "^1.10.3"
vulture = "^2.7"
bandit = "^1.7.5"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
ipython = "^7.18.1"
jupyter = "^1.0.0"
mknotebooks = "^0.7.1"
markdown = "^3.3.0"
twine = "^4.0.2"
hypothesis = "^6.76.0"
hypothesis-pytest = "^0.19.0"
ltlf2dfa = "^1.0.2"
markdown-include = "^0.8.1"
pymdown-extensions = "^10.0.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
